--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Test av branches i GIT</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aliquid incidunt iure dolorum, reprehenderit qui quod voluptate autem fugit deleniti!</h2>
     
 </body>
 </html>
