En undertext är tillagd

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Test av branches i GIT</h1>
-    
+    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, nisi!</h4>
 </body>
 </html>
